@@ -11,6 +11,9 @@ synaptic (0.62.2) unstable; urgency=low
   * gtk/rgdebinstallprogress.cc:
     - intercept ctrl-c in the terminal window and ask
       if that is really the desired action
+  * gtk/rgmainwindow.cc:
+    - fix "Gtk-CRITICAL **: gtk_tree_view_unref_tree_helper"
+      assertion failure error (LP: #38397, closes: #341645)
 
  --
 
